# lxl-python

./: .gitignore  pyinstaller_main_entrance.bat  run_main_entrance.bat
api-example/: dict.py  file_pickle.py  from_import.py  if.py  lists.py  pickle_file.data  regex.py  while.py
api-example/GOS/: root.txt  rotating_file_logger.txt.1  time_rotating_file_logger.txt  time_rotating_file_logger.txt.2017-01-15_23-50-09  time_rotating_file_logger.txt.2017-01-15_23-50-50  time_rotating_file_logger.txt.2017-01-15_23-51-07  time_rotating_file_logger.txt.2017-01-15_23-51-19  time_rotating_file_logger.txt.2017-01-16_00-00-56  time_rotating_file_logger.txt.2017-01-16_00-01-29  time_rotating_file_logger.txt.2017-01-16_00-01-40
api-example/coroutine/: try-coroutine.py
api-example/datatypemodule/: TestBisec.py  TestCounter.py  TestDefaultDict.py  TestHeap.py  TestOrderDict.py  TestWeekRef.py
api-example/datetimeModule/: TestDate.py  TestTimeDetal.py
api-example/fileAndDrive/: FileModule.py  OsPath.py  data.txt
api-example/json/: JsonModule.py
api-example/log/: logfile.txt  logger.py
api-example/os/: OsModule.py
api-example/rules/: kwargs.py
api-example/try-closure/: try-closure.py
codes/api_example/: for_in.py  helloworld.py  import.py  tmp_item.txt
examples/AutoConfig/: AutoConfig.pyproj  AutoConfig.sln  main.py  (+7 more)
py-solution/: py-solution.sln
script_root/: main_entrance.py  main_entrance_cmd_format.txt  pyinstaller_main_entrance.bat  requirements.txt
vs_py_debug/py_debug/: CMakeLists.txt  ReadMe.md
vs_py_debug/py_debug/py_debug/: CMakeLists.txt  main.cpp
vs_py_debug/py_debug/pybind_example/: CMakeLists.txt
vs_py_debug/py_debug/scripts/: py_main.py  scripts.pyproj
(+297 files in other folders)
